execute unit tests in parallel